--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Glint</title>
+    <title>Delhi Digital</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -167,7 +167,7 @@
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead subhead--dark">Hello There</h3>
-                <h1 class="display-1 display-1--light">We Are Glint</h1>
+                <h1 class="display-1 display-1--light">We Are Delhi Digital Co.</h1>
             </div>
         </div> <!-- end section-header -->
 
@@ -512,7 +512,7 @@
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead">Our Clients</h3>
-                <h1 class="display-2">Glint has been honored to
+                <h1 class="display-2">Delhi Digital has been honored to
                 partner up with these clients</h1>
             </div>
         </div> <!-- end section-header -->
@@ -665,8 +665,7 @@
                     <div class="cinfo">
                         <h5>Email Us At</h5>
                         <p>
-                            contact@glintsite.com<br>
-                            info@glintsite.com
+                            contact@delhidigital.co
                         </p>
                     </div>
 
@@ -739,8 +738,7 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span>© Copyright Glint 2017</span> 
-                    <span>Site Template by <a href="https://www.colorlib.com/">Colorlib</a></span>	
+                    <span>© Copyright Delhi Digital Co. 2022</span> 
                 </div>
 
                 <div class="go-top">
